--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "teste",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "start": "npm run lite",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lite": "lite-server"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/LeoMartinsSilva/teste-git.git"
@@ -15,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/LeoMartinsSilva/teste-git/issues"
   },
-  "homepage": "https://github.com/LeoMartinsSilva/teste-git#readme"
+  "homepage": "https://github.com/LeoMartinsSilva/teste-git#readme",
+  "devDependencies": {
+    "lite-server": "^2.5.4"
+  }
 }
